Added results from Sunday, knockout illustrations, championship standings

--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
 				<hr>
 
 				<section id="main_content">
+					<style>
+					label {
+						color: #f0652f;
+					  cursor: pointer;
+					}
+					#toggle_chk { display: none; } /* hide the checkbox */
+					#toggle_span { display: none; }
+					#toggle_chk:checked + #toggle_span { display: block; }
+					</style>
 					<h3>Race event:</h3>
 						<p>
 							Weston Park is an annual model show, and is the spiritual home of UK FPV.<br>
@@ -41,14 +50,201 @@
 							Competitors are ranked after each round by number of laps completed and time taken, and round-by-round (RBR) scoring awards points based on ranking.<br>
 							Overall Qualifying positions are calculated from each competitor's best three scores.
 						</p>
-						<p>
-							The following results come straight from the timing software, prior to corrections and amendments.
-						</p>
 				</section>
 
 				<section id="results">
 					<h3>Results:</h3>
-<ul><li><a href="./results/h11r6.html">h11r6.html</a></li><li><a href="./results/h10r6.html">h10r6.html</a></li><li><a href="./results/h9r6.html">h9r6.html</a></li><li><a href="./results/h8r6.html">h8r6.html</a></li><li><a href="./results/h7r6.html">h7r6.html</a></li><li><a href="./results/h6r6.html">h6r6.html</a></li><li><a href="./results/h5r6.html">h5r6.html</a></li><li><a href="./results/h4r6.html">h4r6.html</a></li><li><a href="./results/h3r6.html">h3r6.html</a></li><li><a href="./results/h2r6.html">h2r6.html</a></li><li><a href="./results/h1r6.html">h1r6.html</a></li><li><a href="./results/h11r5.html">h11r5.html</a></li><li><a href="./results/h10r5.html">h10r5.html</a></li><li><a href="./results/h9r5.html">h9r5.html</a></li><li><a href="./results/h8r5.html">h8r5.html</a></li><li><a href="./results/h7r5.html">h7r5.html</a></li><li><a href="./results/h6r5.html">h6r5.html</a></li><li><a href="./results/h5r5.html">h5r5.html</a></li><li><a href="./results/h4r5.html">h4r5.html</a></li><li><a href="./results/h3r5.html">h3r5.html</a></li><li><a href="./results/h2r5.html">h2r5.html</a></li><li><a href="./results/h1r5.html">h1r5.html</a></li><li><a href="./results/h11r4.html">h11r4.html</a></li><li><a href="./results/h10r4.html">h10r4.html</a></li><li><a href="./results/h9r4.html">h9r4.html</a></li><li><a href="./results/h8r4.html">h8r4.html</a></li><li><a href="./results/h7r4.html">h7r4.html</a></li><li><a href="./results/h6r4.html">h6r4.html</a></li><li><a href="./results/h5r4.html">h5r4.html</a></li><li><a href="./results/h4r4.html">h4r4.html</a></li><li><a href="./results/h3r4.html">h3r4.html</a></li><li><a href="./results/h2r4.html">h2r4.html</a></li><li><a href="./results/h1r4.html">h1r4.html</a></li><li><a href="./results/h11r3.html">h11r3.html</a></li><li><a href="./results/h10r3.html">h10r3.html</a></li><li><a href="./results/h9r3.html">h9r3.html</a></li><li><a href="./results/h8r3.html">h8r3.html</a></li><li><a href="./results/h7r3.html">h7r3.html</a></li><li><a href="./results/h6r3.html">h6r3.html</a></li><li><a href="./results/h5r3.html">h5r3.html</a></li><li><a href="./results/h4r3.html">h4r3.html</a></li><li><a href="./results/h3r3.html">h3r3.html</a></li><li><a href="./results/h2r3.html">h2r3.html</a></li><li><a href="./results/h1r3.html">h1r3.html</a></li><li><a href="./results/h11r2.html">h11r2.html</a></li><li><a href="./results/h10r2.html">h10r2.html</a></li><li><a href="./results/h9r2.html">h9r2.html</a></li><li><a href="./results/h8r2.html">h8r2.html</a></li><li><a href="./results/h7r2.html">h7r2.html</a></li><li><a href="./results/h6r2.html">h6r2.html</a></li><li><a href="./results/h5r2.html">h5r2.html</a></li><li><a href="./results/h4r2.html">h4r2.html</a></li><li><a href="./results/h3r2.html">h3r2.html</a></li><li><a href="./results/h2r2.html">h2r2.html</a></li><li><a href="./results/h1r2.html">h1r2.html</a></li><li><a href="./results/h11r1.html">h11r1.html</a></li><li><a href="./results/h10r1.html">h10r1.html</a></li><li><a href="./results/h9r1.html">h9r1.html</a></li><li><a href="./results/h8r1.html">h8r1.html</a></li><li><a href="./results/h7r1.html">h7r1.html</a></li><li><a href="./results/h6r1.html">h6r1.html</a></li><li><a href="./results/h5r1.html">h5r1.html</a></li><li><a href="./results/h4r1.html">h4r1.html</a></li><li><a href="./results/h3r1.html">h3r1.html</a></li><li><a href="./results/h2r1.html">h2r1.html</a></li><li><a href="./results/h1r1.html">h1r1.html</a></li></ul>
+					<p>
+						<style>
+						#standings_chk { display: none; } /* hide the checkbox */
+						#standings_span { display: none; }
+						#standings_chk:checked + #standings_span { display: block; }
+						</style>
+						<label for="standings_chk">[+] Championship standings</label>
+						<input type="checkbox" id="standings_chk"/>  
+						<span id="standings_span">
+						BFPVRA British Championship points are awarded on <a href="./results/eor6.pdf">finishing positions after qualifying</a>.<br>
+							ERSA Eurocup qualification is awarded to the top four pilots at the end of the competition.<br>
+							FAI World Cup points are awarded on finishing positions at the end of the competition.<br>
+							<img src="results/standings.png">
+						</span>
+					</p>
+					<p>
+						<style>
+						#elim_chk { display: none; } /* hide the checkbox */
+						#elim_span { display: none; }
+						#elim_chk:checked + #elim_span { display: block; }
+						</style>
+						<label for="elim_chk">[+] Elimination stage progression</label>
+						<input type="checkbox" id="elim_chk"/>  
+						<span id="elim_span">
+								The following shows the progression of the 24 finalists through the elimination stages:
+								<img src="results/elimination.png">
+						</span>
+					</p>
+					<p>
+						All individual heat lap times come straight from the timing software, prior to corrections and amendments. End-of-round results take into account corrections and amendments.
+					</p>
+					<h5>Grand final</h5>
+					<ul>
+						<li><a href="./results/gf.html">gf.html</a></li>
+					</ul>
+					<h5>Semi-finals</h5>
+					<ul>
+						<li><a href="./results/sfB.html">sfB.html</a></li>
+						<li><a href="./results/sfA.html">sfA.html</a></li>
+					</ul>
+					<h5>Quarter-finals</h5>
+					<ul>
+						<li><a href="./results/qfD.html">qfD.html</a></li>
+						<li><a href="./results/qfC.html">qfC.html</a></li>
+						<li><a href="./results/qfB.html">qfB.html</a></li>
+						<li><a href="./results/qfA.html">qfA.html</a></li>
+					</ul>
+					<h5>Qualifying Round 6</h5>
+					<p>
+						<style>
+						#eor6_chk { display: none; } /* hide the checkbox */
+						#eor6_span { display: none; }
+						#eor6_chk:checked + #eor6_span { display: block; }
+						</style>
+						<label for="eor6_chk">Qualifying positions after Round 6 (& BFPVRA QE results)</label>
+						<input type="checkbox" id="eor6_chk"/>  
+						<span id="eor6_span"><img src="results/eor6.png"></span>
+					</p>
+					<ul>
+						<li><a href="./results/h11r6.html">h11r6.html</a></li>
+						<li><a href="./results/h10r6.html">h10r6.html</a></li>
+						<li><a href="./results/h9r6.html">h9r6.html</a></li>
+						<li><a href="./results/h8r6.html">h8r6.html</a></li>
+						<li><a href="./results/h7r6.html">h7r6.html</a></li>
+						<li><a href="./results/h6r6.html">h6r6.html</a></li>
+						<li><a href="./results/h5r6.html">h5r6.html</a></li>
+						<li><a href="./results/h4r6.html">h4r6.html</a></li>
+						<li><a href="./results/h3r6.html">h3r6.html</a></li>
+						<li><a href="./results/h2r6.html">h2r6.html</a></li>
+						<li><a href="./results/h1r6.html">h1r6.html</a></li>
+					</ul>
+					<h5>Qualifying Round 5</h5>
+					<p>
+						<style>
+						#eor5_chk { display: none; } /* hide the checkbox */
+						#eor5_span { display: none; }
+						#eor5_chk:checked + #eor5_span { display: block; }
+						</style>
+						<label for="eor5_chk">Qualifying positions after Round 5</label>
+						<input type="checkbox" id="eor5_chk"/>  
+						<span id="eor5_span"><img src="results/eor5.png"></span>
+					</p>
+					<ul>
+						<li><a href="./results/h11r5.html">h11r5.html</a></li>
+						<li><a href="./results/h10r5.html">h10r5.html</a></li>
+						<li><a href="./results/h9r5.html">h9r5.html</a></li>
+						<li><a href="./results/h8r5.html">h8r5.html</a></li>
+						<li><a href="./results/h7r5.html">h7r5.html</a></li>
+						<li><a href="./results/h6r5.html">h6r5.html</a></li>
+						<li><a href="./results/h5r5.html">h5r5.html</a></li>
+						<li><a href="./results/h4r5.html">h4r5.html</a></li>
+						<li><a href="./results/h3r5.html">h3r5.html</a></li>
+						<li><a href="./results/h2r5.html">h2r5.html</a></li>
+						<li><a href="./results/h1r5.html">h1r5.html</a></li>
+					</ul>
+					<h5>Qualifying Round 4</h5>
+					<p>
+						<style>
+						#eor4_chk { display: none; } /* hide the checkbox */
+						#eor4_span { display: none; }
+						#eor4_chk:checked + #eor4_span { display: block; }
+						</style>
+						<label for="eor4_chk">Qualifying positions after Round 4</label>
+						<input type="checkbox" id="eor4_chk"/>  
+						<span id="eor4_span"><img src="results/eor4.png"></span>
+					</p>
+					<ul>
+						<li><a href="./results/h11r4.html">h11r4.html</a></li>
+						<li><a href="./results/h10r4.html">h10r4.html</a></li>
+						<li><a href="./results/h9r4.html">h9r4.html</a></li>
+						<li><a href="./results/h8r4.html">h8r4.html</a></li>
+						<li><a href="./results/h7r4.html">h7r4.html</a></li>
+						<li><a href="./results/h6r4.html">h6r4.html</a></li>
+						<li><a href="./results/h5r4.html">h5r4.html</a></li>
+						<li><a href="./results/h4r4.html">h4r4.html</a></li>
+						<li><a href="./results/h3r4.html">h3r4.html</a></li>
+						<li><a href="./results/h2r4.html">h2r4.html</a></li>
+						<li><a href="./results/h1r4.html">h1r4.html</a></li>
+					</ul>
+					<h5>Qualifying Round 3</h5>
+					<p>
+						<style>
+						#eor3_chk { display: none; } /* hide the checkbox */
+						#eor3_span { display: none; }
+						#eor3_chk:checked + #eor3_span { display: block; }
+						</style>
+						<label for="eor3_chk">Qualifying positions after Round 3</label>
+						<input type="checkbox" id="eor3_chk"/>  
+						<span id="eor3_span"><img src="results/eor3.png"></span>
+					</p>
+					<ul>
+						<li><a href="./results/h11r3.html">h11r3.html</a></li>
+						<li><a href="./results/h10r3.html">h10r3.html</a></li>
+						<li><a href="./results/h9r3.html">h9r3.html</a></li>
+						<li><a href="./results/h8r3.html">h8r3.html</a></li>
+						<li><a href="./results/h7r3.html">h7r3.html</a></li>
+						<li><a href="./results/h6r3.html">h6r3.html</a></li>
+						<li><a href="./results/h5r3.html">h5r3.html</a></li>
+						<li><a href="./results/h4r3.html">h4r3.html</a></li>
+						<li><a href="./results/h3r3.html">h3r3.html</a></li>
+						<li><a href="./results/h2r3.html">h2r3.html</a></li>
+						<li><a href="./results/h1r3.html">h1r3.html</a></li>
+					</ul>
+					<h5>Qualifying Round 2</h5>
+					<p>
+						<style>
+						#eor2_chk { display: none; } /* hide the checkbox */
+						#eor2_span { display: none; }
+						#eor2_chk:checked + #eor2_span { display: block; }
+						</style>
+						<label for="eor2_chk">Qualifying positions after Round 2</label>
+						<input type="checkbox" id="eor2_chk"/>  
+						<span id="eor2_span"><img src="results/eor2.png"></span>
+					</p>
+					<ul>
+						<li><a href="./results/h11r2.html">h11r2.html</a></li>
+						<li><a href="./results/h10r2.html">h10r2.html</a></li>
+						<li><a href="./results/h9r2.html">h9r2.html</a></li>
+						<li><a href="./results/h8r2.html">h8r2.html</a></li>
+						<li><a href="./results/h7r2.html">h7r2.html</a></li>
+						<li><a href="./results/h6r2.html">h6r2.html</a></li>
+						<li><a href="./results/h5r2.html">h5r2.html</a></li>
+						<li><a href="./results/h4r2.html">h4r2.html</a></li>
+						<li><a href="./results/h3r2.html">h3r2.html</a></li>
+						<li><a href="./results/h2r2.html">h2r2.html</a></li>
+						<li><a href="./results/h1r2.html">h1r2.html</a></li>
+					</ul>
+					<h5>Qualifying Round 1</h5>
+					<p>
+						<style>
+						#eor1_chk { display: none; } /* hide the checkbox */
+						#eor1_span { display: none; }
+						#eor1_chk:checked + #eor1_span { display: block; }
+						</style>
+						<label for="eor1_chk">Qualifying positions after Round 1</label>
+						<input type="checkbox" id="eor1_chk"/>  
+						<span id="eor1_span"><img src="results/eor1.png"></span>
+					</p>
+					<ul>
+						<li><a href="./results/h11r1.html">h11r1.html</a></li>
+						<li><a href="./results/h10r1.html">h10r1.html</a></li>
+						<li><a href="./results/h9r1.html">h9r1.html</a></li>
+						<li><a href="./results/h8r1.html">h8r1.html</a></li>
+						<li><a href="./results/h7r1.html">h7r1.html</a></li>
+						<li><a href="./results/h6r1.html">h6r1.html</a></li>
+						<li><a href="./results/h5r1.html">h5r1.html</a></li>
+						<li><a href="./results/h4r1.html">h4r1.html</a></li>
+						<li><a href="./results/h3r1.html">h3r1.html</a></li>
+						<li><a href="./results/h2r1.html">h2r1.html</a></li>
+						<li><a href="./results/h1r1.html">h1r1.html</a></li>
+					</ul>
 				</section>
 				<footer>
 					Event hosted by <a href="http://www.rotor-racing.com">Rotor-RACING</a> and <a href="http://www.helifest.co.uk/">Helifest</a><br>
