--- a/results/qfD.html
+++ b/results/qfD.html
@@ -10,7 +10,7 @@
 <tr bgcolor=F0652F>
 <td ALIGN=center><FONT color="#FFFFFF" face="Arial, Helvetica"><STRONG>Weston Park Dronefest 2017 - Quarter finals
 </STRONG></FONT></td></tr></TABLE>
-<H2 ALIGN=CENTER>Race Results for QUARTER FINAL A</H2>
+<H2 ALIGN=CENTER>Race Results for QUARTER FINAL D</H2>
 <TABLE FONT ALIGN="CENTER" BORDER="0" CELLSPACING="0" CELLPADDING="2">
 <TR>
 <TD BGCOLOR="#F0652F" ALIGN=center WIDTH="55"><FONT COLOR="#ffffff"><STRONG>Position</STRONG></FONT></TD>
