--- a/results/sfA.html
+++ b/results/sfA.html
@@ -8,9 +8,9 @@
 <BODY BGCOLOR="#ffffff" TEXT="#000000" leftMargin=0 topMargin=0 marginheight=0 marginwidth=0>
 <TABLE width="100%" border=0 height=30 cellpadding=0 cellspacing=0>
 <tr bgcolor=F0652F>
-<td ALIGN=center><FONT color="#FFFFFF" face="Arial, Helvetica"><STRONG>Weston Park Dronefest 2017 Quarter finals
+<td ALIGN=center><FONT color="#FFFFFF" face="Arial, Helvetica"><STRONG>Weston Park Dronefest 2017 Semi finals
 </STRONG></FONT></td></tr></TABLE>
-<H2 ALIGN=CENTER>Race Results for SEMI FINAL B</H2>
+<H2 ALIGN=CENTER>Race Results for SEMI FINAL A</H2>
 <TABLE FONT ALIGN="CENTER" BORDER="0" CELLSPACING="0" CELLPADDING="2">
 <TR>
 <TD BGCOLOR="#F0652F" ALIGN=center WIDTH="55"><FONT COLOR="#ffffff"><STRONG>Position</STRONG></FONT></TD>
@@ -23,57 +23,66 @@
 </TR>
 <TR>
 <TD ALIGN=center>1</TD>
+<TD ALIGN=center>5</TD>
+<TD ALIGN=left>Jon Rogers</TD>
+<TD ALIGN=right>5</TD>
+<TD ALIGN=right>1m40.968</TD>
+<TD ALIGN=right>14.047</TD>
+<TD ALIGN=right>20.194</TD>
+</TR>
+<TR>
+<TD ALIGN=center>2</TD>
+<TD ALIGN=center>3</TD>
+<TD ALIGN=left>Luke Bannister</TD>
+<TD ALIGN=right>5</TD>
+<TD ALIGN=right>1m41.718</TD>
+<TD ALIGN=right>18.640</TD>
+<TD ALIGN=right>20.344</TD>
+</TR>
+<TR>
+<TD ALIGN=center>3</TD>
 <TD ALIGN=center>1</TD>
-<TD ALIGN=left>Gary Kent</TD>
+<TD ALIGN=left>Lee Underwood</TD>
 <TD ALIGN=right>5</TD>
-<TD ALIGN=right>1m44.344</TD>
-<TD ALIGN=right>20.547</TD>
-<TD ALIGN=right>20.869</TD>
-</TR>
-<TR>
-<TD ALIGN=center>2</TD>
-<TD ALIGN=center>3</TD>
-<TD ALIGN=left>Matthew Evans</TD>
-<TD ALIGN=right>5</TD>
-<TD ALIGN=right>1m52.063</TD>
-<TD ALIGN=right>21.969</TD>
-<TD ALIGN=right>22.413</TD>
-</TR>
-<TR>
-<TD ALIGN=center>3</TD>
-<TD ALIGN=center>4</TD>
-<TD ALIGN=left>Harry Plested</TD>
-<TD ALIGN=right>5</TD>
-<TD ALIGN=right>1m56.625</TD>
-<TD ALIGN=right>22.578</TD>
-<TD ALIGN=right>23.325</TD>
+<TD ALIGN=right>2m00.609</TD>
+<TD ALIGN=right>21.391</TD>
+<TD ALIGN=right>24.122</TD>
 </TR>
 <TR>
 <TD ALIGN=center>4</TD>
-<TD ALIGN=center>6</TD>
-<TD ALIGN=left>Phil Brown</TD>
-<TD ALIGN=right>5</TD>
-<TD ALIGN=right>1m58.703</TD>
-<TD ALIGN=right>22.437</TD>
-<TD ALIGN=right>23.741</TD>
+<TD ALIGN=center>4</TD>
+<TD ALIGN=left>Rob Saxton</TD>
+<TD ALIGN=right>3</TD>
+<TD ALIGN=right>1m06.906</TD>
+<TD ALIGN=right>22.735</TD>
+<TD ALIGN=right>22.302</TD>
 </TR>
 <TR>
 <TD ALIGN=center>5</TD>
 <TD ALIGN=center>2</TD>
-<TD ALIGN=left>Elliot Naseby</TD>
+<TD ALIGN=left>Adam Blackburn</TD>
 <TD ALIGN=right>1</TD>
-<TD ALIGN=right>0m23.453</TD>
+<TD ALIGN=right>0m21.109</TD>
 <TD ALIGN=right>0.000</TD>
-<TD ALIGN=right>23.453</TD>
+<TD ALIGN=right>21.109</TD>
 </TR>
 <TR>
 <TD ALIGN=center>6</TD>
-<TD ALIGN=center>5</TD>
-<TD ALIGN=left>Ollie Peters</TD>
-<TD ALIGN=right>0</TD>
-<TD ALIGN=right>NO TIME</TD>
+<TD ALIGN=center>6</TD>
+<TD ALIGN=left>Marc Booth</TD>
+<TD ALIGN=right>1</TD>
+<TD ALIGN=right>0m23.375</TD>
 <TD ALIGN=right>0.000</TD>
-<TD ALIGN=right></TD>
+<TD ALIGN=right>23.375</TD>
+</TR>
+<TR>
+<TD ALIGN=center>7</TD>
+<TD ALIGN=center>7</TD>
+<TD ALIGN=left>Unknown 3257191</TD>
+<TD ALIGN=right>1</TD>
+<TD ALIGN=right>0m23.797</TD>
+<TD ALIGN=right>0.000</TD>
+<TD ALIGN=right>23.797</TD>
 </TR>
 </TABLE><BR>
 <TABLE FONT ALIGN="CENTER" BORDER="0" CELLSPACING="0" CELLPADDING="2">
@@ -86,12 +95,13 @@
 <TD BGCOLOR="#F0652F" ALIGN=right WIDTH="60"><FONT COLOR="#ffffff"><STRONG>Pilot 4</STRONG></FONT></TD>
 <TD BGCOLOR="#F0652F" ALIGN=right WIDTH="60"><FONT COLOR="#ffffff"><STRONG>Pilot 5</STRONG></FONT></TD>
 <TD BGCOLOR="#F0652F" ALIGN=right WIDTH="60"><FONT COLOR="#ffffff"><STRONG>Pilot 6</STRONG></FONT></TD>
+<TD BGCOLOR="#F0652F" ALIGN=right WIDTH="60"><FONT COLOR="#ffffff"><STRONG>Pilot 7</STRONG></FONT></TD>
 </TR>
-<TR><TD BGCOLOR="#F0652F" ALIGN=right><FONT COLOR="#ffffff"><STRONG>1</STRONG></FONT></TD><TD ALIGN=right>20.188</TD><TD ALIGN=right>23.453</TD><TD ALIGN=right>23.250</TD><TD ALIGN=right>24.313</TD><TD></TD><TD ALIGN=right>25.766</TD></TR>
-<TR><TD BGCOLOR="#F0652F" ALIGN=right><FONT COLOR="#ffffff"><STRONG>2</STRONG></FONT></TD><TD ALIGN=right>20.547</TD><TD></TD><TD ALIGN=right>22.219</TD><TD ALIGN=right>22.672</TD><TD></TD><TD ALIGN=right>23.125</TD></TR>
-<TR><TD BGCOLOR="#F0652F" ALIGN=right><FONT COLOR="#ffffff"><STRONG>3</STRONG></FONT></TD><TD ALIGN=right>21.171</TD><TD></TD><TD ALIGN=right>21.969</TD><TD ALIGN=right>23.218</TD><TD></TD><TD ALIGN=right>24.703</TD></TR>
-<TR><TD BGCOLOR="#F0652F" ALIGN=right><FONT COLOR="#ffffff"><STRONG>4</STRONG></FONT></TD><TD ALIGN=right>21.438</TD><TD></TD><TD ALIGN=right>22.234</TD><TD ALIGN=right>23.844</TD><TD></TD><TD ALIGN=right>22.672</TD></TR>
-<TR><TD BGCOLOR="#F0652F" ALIGN=right><FONT COLOR="#ffffff"><STRONG>5</STRONG></FONT></TD><TD ALIGN=right>21.000</TD><TD></TD><TD ALIGN=right>22.391</TD><TD ALIGN=right>22.578</TD><TD></TD><TD ALIGN=right>22.437</TD></TR>
+<TR><TD BGCOLOR="#F0652F" ALIGN=right><FONT COLOR="#ffffff"><STRONG>1</STRONG></FONT></TD><TD ALIGN=right>23.234</TD><TD ALIGN=right>21.109</TD><TD ALIGN=right>24.047</TD><TD ALIGN=right>20.812</TD><TD ALIGN=right>26.359</TD><TD ALIGN=right>23.375</TD><TD ALIGN=right>23.797</TD></TR>
+<TR><TD BGCOLOR="#F0652F" ALIGN=right><FONT COLOR="#ffffff"><STRONG>2</STRONG></FONT></TD><TD ALIGN=right>21.391</TD><TD></TD><TD ALIGN=right>19.375</TD><TD ALIGN=right>22.735</TD><TD ALIGN=right>14.156</TD><TD></TD><TD></TD></TR>
+<TR><TD BGCOLOR="#F0652F" ALIGN=right><FONT COLOR="#ffffff"><STRONG>3</STRONG></FONT></TD><TD ALIGN=right>22.218</TD><TD></TD><TD ALIGN=right>19.171</TD><TD ALIGN=right>23.359</TD><TD ALIGN=right>14.047</TD><TD></TD><TD></TD></TR>
+<TR><TD BGCOLOR="#F0652F" ALIGN=right><FONT COLOR="#ffffff"><STRONG>4</STRONG></FONT></TD><TD ALIGN=right>29.875</TD><TD></TD><TD ALIGN=right>20.485</TD><TD></TD><TD ALIGN=right>21.969</TD><TD></TD><TD></TD></TR>
+<TR><TD BGCOLOR="#F0652F" ALIGN=right><FONT COLOR="#ffffff"><STRONG>5</STRONG></FONT></TD><TD ALIGN=right>23.891</TD><TD></TD><TD ALIGN=right>18.640</TD><TD></TD><TD ALIGN=right>24.437</TD><TD></TD><TD></TD></TR>
 </TABLE><BR>
 <HR WIDTH="95%">Professional Racing Solutions by Rotor-Racing - <A HREF="http://www.rotor-racing.com" TARGET="resource window">www.rotor-racing.com</A>
 </BODY></HTML>
